# arsenal

./: .gitignore  LICENSE  README.md  pyproject.toml
arsenal/: __init__.py  __main__.py  main.py
